Backport ChildProcessLogger to java 8